# gdllm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/gdllm/: __init__.py
src/gdllm/abstract/: __init__.py  llm.py  tool.py
src/gdllm/implementations/anthropic/: config.py  llm.py  message.py
src/gdllm/implementations/deepseek/: llm.py
src/gdllm/implementations/google/: config.py  llm.py  message.py
src/gdllm/implementations/openai/: config.py  llm.py  message.py  tool.py
tests/: test_anthropic.py  test_openai.py
