[project]
name = "gdllm"
version = "0.1.0"
description = "TBC"
readme = "README.md"
authors = [
    { name = "Rhian McClelland", email = "Rhian.McClelland@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.63.0",
    "pydantic>=2.10.6",
]

[project.scripts]
gdllm = "gdllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
